Issue #5: amended CMake configuration with skeleton for Blackmagic SDK

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,10 +129,14 @@ if(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
         SET(USE_LIBVLC ON CACHE BOOL "OFF ON" FORCE)
     endif(NOT USE_EPIPHANSDK)
 endif(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
-
 if(USE_NETWORK_SOURCES AND USE_I420)
     SET(USE_LIBVLC ON CACHE BOOL "OFF ON" FORCE)
 endif(USE_NETWORK_SOURCES AND USE_I420)
+
+# Determine if Blackmagic Desktop Video SDK needed
+if(USE_BLACKMAGIC_DECKLINK_SDI_4K)
+    SET(USE_BLACKMAGICSDK ON CACHE BOOL "OFF ON" FORCE)
+endif(USE_BLACKMAGIC_DECKLINK_SDI_4K)
 
 # Determine whether FFmpeg needed
 if(USE_HEVC OR USE_VP9)
@@ -242,6 +246,14 @@ if(USE_EPIPHANSDK)
     LIST(APPEND HEADERS epiphansdk/epiphansdk_video_source.h)
     LIST(APPEND SOURCES epiphansdk/epiphansdk_video_source.cpp)
 endif(USE_EPIPHANSDK)
+
+# Blackmagic SDK video source
+if(USE_BLACKMAGICSDK)
+    ADD_SUBDIRECTORY(cmake/blackmagicsdk)
+    INCLUDE_DIRECTORIES(${BlackmagicSDK_INCLUDE_DIRS})
+    LIST(APPEND LIBS ${BlackmagicSDK_LIBS})
+    ADD_DEFINITIONS(-DUSE_BLACKMAGICSDK)
+endif(USE_BLACKMAGICSDK)
 
 # Performance benchmarking
 if(GENERATE_PERFORMANCE_OUTPUT)
