--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,9 +157,6 @@ pypi-epiphan-dvi2pcie-duo:
     - export STORZ_STACK_GIFTGRAB_ENV_ROOT=/home/gitlab-runner/environments/giftgrab/usr/local
     # TODO - export PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/bin":$PATH
     - export PKG_CONFIG_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib/pkgconfig":$PKG_CONFIG_PATH
-    # for custom libVLC
-    - export LIBVLC_INCLUDE_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/include"
-    - export LIBVLC_LIBRARY_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib"
     - GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/pypi-epiphan-dvi2pcie-duo"
     - GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/install"
     - GiftGrab_venv=venv
@@ -193,29 +190,11 @@ pypi-epiphan-dvi2pcie-duo:
     # - edd-sdi-bgra-xvid; exit_on_fail
     # - edd-dvi-bgra-vp9; exit_on_fail
     # - edd-sdi-bgra-vp9; exit_on_fail
-    # Epiphan DVI2PCIe Duo support (libVLC only)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (Epiphan SDK only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
     # TODO: issue #102
     # - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
     # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
-    - edd-dvi-i420-hevc; exit_on_fail
-    - edd-sdi-i420-hevc; exit_on_fail
-    - edd-dvi-i420-vp9; exit_on_fail
-    - edd-sdi-i420-vp9; exit_on_fail
-    - ls -alh ./*.mp4
-    # - ls -alh ./*.avi
-    - ls -alh ./*.webm
-    - rm -f ./*.mp4 ./*.avi ./*.webm
-    # Epiphan DVI2PCIe Duo support (both OpenCV and libVLC)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
-    # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
-    # - edd-dvi-bgra-hevc; exit_on_fail
-    # - edd-sdi-bgra-hevc; exit_on_fail
-    # - edd-dvi-bgra-xvid; exit_on_fail
-    # - edd-sdi-bgra-xvid; exit_on_fail
-    # - edd-dvi-bgra-vp9; exit_on_fail
-    # - edd-sdi-bgra-vp9; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
     - edd-dvi-i420-vp9; exit_on_fail
@@ -278,11 +257,9 @@ epiphan-dvi2pcie-duo:
     - export STORZ_STACK_GIFTGRAB_ENV_ROOT=/home/gitlab-runner/environments/giftgrab/usr/local
     # TODO - export PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/bin":$PATH
     - export PKG_CONFIG_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib/pkgconfig":$PKG_CONFIG_PATH
-    # for custom libVLC
-    - export LIBVLC_INCLUDE_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/include"
-    - export LIBVLC_LIBRARY_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib"
     # test VideoSourceFactory (needs both colour spaces enabled)
-    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON -D ENABLE_NONFREE=ON "$GiftGrab_SOURCE_DIR"
+    - export USE_EPIPHANSDK=3
+    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D USE_EPIPHANSDK=ON -D ENABLE_NONFREE=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON -D ENABLE_NONFREE=ON "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest -R Epiphan_DVI2PCIeDuo_VideoSourceFactory_DVI_I420; exit_on_fail  # due to issue #126
@@ -304,9 +281,6 @@ epiphan-dvi2pcie-duo:
     # Epiphan SDK
     # dummy var, to induce width_offset in test_epiphan_py_module.py
     # see definition of width_offset in test_epiphan_py_module.py (Epiphan DVI2PCIe Duo tests)
-    - export USE_EPIPHANSDK=3
-    - cmake -D USE_EPIPHANSDK=ON -D ENABLE_NONFREE=ON .
-    - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
     # NumPy support
