--- a/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
+++ b/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
@@ -17,9 +17,7 @@ TARGET_LINK_LIBRARIES(
 )
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST}
-        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${COLOUR_SPACE}
-    )
+    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
 
