Issue #5: dropping Blackmagic support for BGRA: revised CMake configuration including tests

--- a/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
+++ b/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
@@ -15,30 +15,26 @@ TARGET_LINK_LIBRARIES(
     ${VIDEO_SOURCE_FACTORY_TEST}
     ${LIBS} ${NAME}
 )
-foreach(COLOUR_SPACE ${COLOUR_SPACES})
-    SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST})
-    LIST(APPEND TESTS_LIST ${NAME_TEST})
-endforeach(COLOUR_SPACE)
+SET(COLOUR_SPACE UYVY)
+
+SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
+ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST})
+LIST(APPEND TESTS_LIST ${NAME_TEST})
 
 # Blackmagic DeckLink SDI 4K on its own
-foreach(COLOUR_SPACE ${COLOUR_SPACES})
-    SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --colour-space=${COLOUR_SPACE} test_unit.py
-    )
-    LIST(APPEND TESTS_LIST ${NAME_TEST})
-endforeach(COLOUR_SPACE)
+SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_${COLOUR_SPACE})
+ADD_TEST(NAME ${NAME_TEST}
+    COMMAND py.test --colour-space=${COLOUR_SPACE} test_unit.py
+)
+LIST(APPEND TESTS_LIST ${NAME_TEST})
 
 # Blackmagic DeckLink SDI 4K using the observer design pattern
-foreach(COLOUR_SPACE ${COLOUR_SPACES})
-    SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_ObserverPattern_${COLOUR_SPACE})
-    SET(FRAME_RATE 57)
-    ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --colour-space=${COLOUR_SPACE} --frame-rate=${FRAME_RATE} --observers=3 test_observer.py
-    )
-    LIST(APPEND TESTS_LIST ${NAME_TEST})
-endforeach(COLOUR_SPACE)
+SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_ObserverPattern_${COLOUR_SPACE})
+SET(FRAME_RATE 57)
+ADD_TEST(NAME ${NAME_TEST}
+    COMMAND py.test --colour-space=${COLOUR_SPACE} --frame-rate=${FRAME_RATE} --observers=3 test_observer.py
+)
+LIST(APPEND TESTS_LIST ${NAME_TEST})
 
 # to avoid copying stuff around
 SET_TESTS_PROPERTIES(${TESTS_LIST}
