--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -373,6 +373,8 @@ pypi-blackmagic-decklink-sdi-4k:
   script:
     # prepare environment
     - export BlackmagicSDK_DIR="/home/gitlab-runner/environments/giftgrab/opt/Blackmagic_DeckLink_SDK_10.4/SDK"
+    # custom Boost
+    - export BOOST_ROOT="/home/gitlab-runner/environments/giftgrab/usr/local"
     - GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/pypi-blackmagic-decklink-sdi-4k"
     - GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/install"
     - GiftGrab_venv=venv
