--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include api *
 recursive-include cmake *
 recursive-include epiphansdk *
+recursive-include blackmagicsdk *
 recursive-include vlc *
 recursive-include ffmpeg *
 recursive-include opencv *
