Issue #5: revised CMake Blackmagic SDK configuration script such that GIFT-Grab links directly to the installed driver lib instead of compiling Blackmagic SDK components

--- a/src/cmake/blackmagicsdk/CMakeLists.txt
+++ b/src/cmake/blackmagicsdk/CMakeLists.txt
@@ -5,18 +5,21 @@ if(NOT DEFINED ENV{BlackmagicSDK_DIR})
         "BlackmagicSDK_DIR does not seem to be defined in your environment. This is needed to find Blackmagic Desktop Video SDK components.")
 endif(NOT DEFINED ENV{BlackmagicSDK_DIR})
 
+FIND_LIBRARY(DeckLinkAPI_LIB
+    NAMES DeckLinkAPI
+    PATHS /usr/lib
+)
+if(NOT DeckLinkAPI_LIB)
+    MESSAGE(FATAL_ERROR
+        "Blackmagic DeckLink drivers do not seem to be installed on your system. They are needed for capturing video using a Blackmagic card.")
+endif(NOT DeckLinkAPI_LIB)
+
 SET(BlackmagicSDK_INCLUDE_DIRS
     $ENV{BlackmagicSDK_DIR}/Linux/include
     CACHE INTERNAL "Blackmagic Desktop Video SDK include dirs"
 )
-INCLUDE_DIRECTORIES(${BlackmagicSDK_INCLUDE_DIRS})
-
-SET(DeckLinkAPI_LIB decklinkapi)
-ADD_LIBRARY(${DeckLinkAPI_LIB} SHARED
-    $ENV{BlackmagicSDK_DIR}/Linux/include/DeckLinkAPIDispatch.cpp
-)
 
 SET(BlackmagicSDK_LIBS
     ${DeckLinkAPI_LIB}
-    CACHE INTERNAL "Blackmagic DeckLink API library compiled from source"
+    CACHE INTERNAL "Blackmagic Desktop Video SDK libs to link against"
 )
