--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,11 @@ linux:
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - make install
+    # test support for video files
+    - cmake -D USE_FILES=ON .
+    - make -j; exit_on_fail
+    - ctest; exit_on_fail
+    - make install
     # build docs
     - cmake -D BUILD_DOC=ON .
     - make -j; exit_on_fail
@@ -140,6 +145,11 @@ pypi:
     - pip install numpy
     - test-giftgrab-numpy-bgra; exit_on_fail
     - test-giftgrab-numpy-i420; exit_on_fail
+    # test support for video files
+    - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --install-option="--files" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-file-hevc; exit_on_fail
+    - test-giftgrab-file-xvid; exit_on_fail
+    - test-giftgrab-file-vp9; exit_on_fail
     # TODO: delete this line after issue #133
     - unset BOOST_ROOT
     - deactivate
