Issue #119: added a very simple pipelined processing test (see issue #153 as well)

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -44,6 +44,9 @@ endif(USE_UYVY)
 # test VideoFrame
 SUBDIRS(videoframe)
 
+# test pipelined processing
+SUBDIRS(pipeline)
+
 # common configuration
 if(USE_HEVC OR USE_XVID OR USE_VP9)
     SUBDIRS(target)
