Issue #74: FFmpeg activated unconditionally for USE_FILES option

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -147,8 +147,7 @@ if(USE_BLACKMAGIC_DECKLINK_SDI_4K)
 endif(USE_BLACKMAGIC_DECKLINK_SDI_4K)
 
 # Determine whether FFmpeg needed
-if(USE_HEVC OR USE_VP9 OR
-   (USE_FILES AND USE_XVID AND (USE_I420 OR USE_UYVY)))
+if(USE_HEVC OR USE_VP9 OR USE_FILES)
     SET(USE_FFMPEG ON CACHE BOOL "OFF ON" FORCE)
 endif()
 
