Issue #164: excluded current branch from CI builds, as we're only editing README and not the code

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,8 @@ linux:
     - make install
   tags:
     - gift-linux
+  except:
+    - 164-revise-readme
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -163,6 +165,8 @@ pypi:
   tags:
     - gift-linux
     - gift-pypi
+  except:
+    - 164-revise-readme
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
