--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -700,7 +700,9 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @PROJECT_BINARY_DIR@/extern
+EXCLUDE                = @PROJECT_BINARY_DIR@/extern \
+                         @PROJECT_SOURCE_DIR@/tests \
+                         @PROJECT_BINARY_DIR@/tests
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
