--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -715,7 +715,8 @@ EXCLUDE_SYMLINKS       = NO
 # for example use the pattern */test/*
 
 EXCLUDE_PATTERNS       = */tests/* \
-                         */extern/*
+                         */extern/* \
+                         */CMakeFiles/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
