--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -667,8 +667,7 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = @doxy_main_page@ \
-                         @PROJECT_SOURCE_DIR@ \
-                         @PROJECT_BINARY_DIR@
+                         @PROJECT_SOURCE_DIR@/api
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
