--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -724,8 +724,7 @@ EXCLUDE_PATTERNS       = */tests/* \
 # AClass::ANamespace, ANamespace::*Test
 
 EXCLUDE_SYMBOLS        = MaskFrame \
-                         gg::FrameBox \
-                         gg::DeckLinkDisplayModeDetector
+                         gg::FrameBox
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or
 # directories that contain example code fragments that are included (see
