--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -714,8 +714,7 @@ EXCLUDE_SYMLINKS       = NO
 # for example use the pattern */test/*
 
 EXCLUDE_PATTERNS       = */tests/* \
-                         */extern/* \
-                         */CMakeFiles/*
+                         */extern/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
