--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -699,7 +699,10 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @PROJECT_SOURCE_DIR@/python
+EXCLUDE                = @PROJECT_BINARY_DIR@/extern \
+                         @PROJECT_SOURCE_DIR@/tests \
+                         @PROJECT_BINARY_DIR@/tests \
+                         @PROJECT_SOURCE_DIR@/python
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -713,8 +716,7 @@ EXCLUDE_SYMLINKS       = NO
 # against the file with absolute path, so to exclude all test directories
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = */tests/* \
-                         */extern/*
+EXCLUDE_PATTERNS       =
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
