--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -699,9 +699,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @PROJECT_BINARY_DIR@/extern \
-                         @PROJECT_SOURCE_DIR@/tests \
-                         @PROJECT_BINARY_DIR@/tests
+EXCLUDE                = @PROJECT_BINARY_DIR@/extern
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
