--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -42,8 +42,9 @@ PROJECT_NUMBER         =
 # for a project that appears at the top of each page and should give viewer
 # a quick idea about the purpose of the project. Keep the description short.
 
-PROJECT_BRIEF          = "Open-source C++ and Python API for acquiring, processing \
-                         and encoding video streams in real time. \
+PROJECT_BRIEF          = "Open-source C++ and Python API (supports NumPy and \
+                         SciPy) for acquiring, processing and encoding video \
+                         streams in real time. \
                          Copyright (c) 2015 - 2017, University College London (UCL)"
 
 # With the PROJECT_LOGO tag one can specify an logo or icon that is
