--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -52,7 +52,7 @@ PROJECT_BRIEF          = "Open-source C++ and Python API (supports NumPy and \
 # exceed 55 pixels and the maximum width should not exceed 200 pixels.
 # Doxygen will copy the logo to the output directory.
 
-PROJECT_LOGO           =
+PROJECT_LOGO           = @PROJECT_SOURCE_DIR@/../res/gift-grab-75x75.png
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
