--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -365,6 +365,7 @@ pypi-network-sources:
     - gift-epiphan-pearl
   only:
     - 5-add-support-for-blackmagic
+    - 174-networksourceunavailable-not-exposed-to-python
 
 ################## Device: Epiphan Pearl ##################
 network-sources:
@@ -391,6 +392,7 @@ network-sources:
     - gift-epiphan-pearl
   only:
     - 5-add-support-for-blackmagic
+    - 174-networksourceunavailable-not-exposed-to-python
 
 ################## Device: Blackmagic DeckLink SDI 4K ##################
 pypi-blackmagic-decklink-sdi-4k:
