--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,6 +90,7 @@ linux:
     - 164-revise-readme
     - 162-revise-contribution-guide-before-open-sourcing
     - 168-correct-ffmpeg-version-in-documentation
+    - 177-howto-links-for-dependencies-broken-on-github-mirror
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -171,6 +172,7 @@ pypi:
     - 164-revise-readme
     - 162-revise-contribution-guide-before-open-sourcing
     - 168-correct-ffmpeg-version-in-documentation
+    - 177-howto-links-for-dependencies-broken-on-github-mirror
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
