--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,18 +65,18 @@ linux:
     # VP9 support
     - cmake -D USE_VP9=ON .
     - make -j; exit_on_fail
-    - ctest; exit_on_fail
+    - ctest -E Test_VP9; exit_on_fail
     - make install
     # NumPy support
     # TODO: remove BOOST_ROOT parameter after issue #133
     - cmake -D BOOST_ROOT="$BOOST_163_ROOT_DIR" -D USE_NUMPY=ON .
     - make -j; exit_on_fail
-    - ctest; exit_on_fail
+    - ctest -E Test_VP9; exit_on_fail
     - make install
     # test support for video files
     - cmake -D USE_FILES=ON .
     - make -j; exit_on_fail
-    - ctest; exit_on_fail
+    - ctest -E Test_VP9; exit_on_fail
     - make install
     # build docs
     - cmake -D BUILD_DOC=ON .
