Issue #133: removed custom BOOST_ROOT from linux cmake install (after installing Boost 1.63 system-wide on Adelie)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,8 +68,7 @@ linux:
     - ctest -E Test_VP9; exit_on_fail
     - make install
     # NumPy support
-    # TODO: remove BOOST_ROOT parameter after issue #133
-    - cmake -D BOOST_ROOT="$BOOST_163_ROOT_DIR" -D USE_NUMPY=ON .
+    - cmake -D USE_NUMPY=ON .
     - make -j; exit_on_fail
     - ctest -E Test_VP9; exit_on_fail
     - make install
