--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,7 +121,9 @@ pypi:
     # Ensure installer without options fails
     - set +e
     - pip install -vvv --upgrade "$PyPI_INSTALLER"; exit_on_success
+    - aasdf
     - set -e
+    - baasi333
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-hevc-bgra; exit_on_fail
